Changes since version 1.2.0
---------------------------

- Replaced interface Glacier::PasswordVerifier with
  Glacier::PermissionsVerifier, property
  Glacier.Starter.PasswordVerifier with
  Glacier.Starter.PermissionsVerifier, and changed
  Glacier::Starter::startRouter() to throw PermissionDeniedException
  instead of InvalidPasswordException.

- Fixed a problem with the random selection of SSL endpoints.

- Ice is now supported on Windows 98 SE. See INSTALL.WINDOWS.

- Fixed an incorrect complaint in the Slice parser about a change of
  meaning for enumeration constant definitions.

- The glacierrouter and glacierstarter processes used to abort if
  given a non-existent config file.

- Changed Ice::Exception::ice_name() to return const std::string&
  instead of returning a string by value.

- Added support for "global" metadata, which can only be specified
  once in a file and must appear before any definitions. The syntax
  is similar to that of local metadata, but with an extra set of
  brackets: [["metadata1","metadata2","etc."]]. The first use of this
  metadata is for specifying a package in Java.

- The IcePatch server no longer changes the working directory.
  This avoids potential problems with core files being generated in
  the data directory.

- Ice now uses gethostbyname_r() if available.

- Errors during close() or shutdown() on connections now cause
  exceptions.

- Fixed a deadlock that could happen if requests were sent from the
  exception() AMI callback.

- Eliminated the need to define _UNICODE when building Ice on Windows.

- Fixed problems with generated code in slice2cpp and slice2freeze
  when --header-ext is used.

- The Slice parser and database transformer didn't parse negative
  floating-point numbers correctly. This has been fixed.

- If the Glacier Starter couldn't start the Glacier Router, the
  starter terminated. This has been fixed.

- Visual C++ 7.x builds can now be used by applications built with 
  /Zc:wchar_t.
